Rangeslider: fix z-index issue with inputs in field contain which prevented them from being focused

--- a/css/structure/jquery.mobile.forms.rangeslider.css
+++ b/css/structure/jquery.mobile.forms.rangeslider.css
@@ -66,7 +66,10 @@
 	right: 0;
 	left: 0;
 }
-
+.ui-field-contain .ui-rangeslider input.ui-input-text.ui-slider-input{
+	position: relative;
+	z-index:1;
+}
 @media all and (max-width: 27.9375em){
 	.ui-rangeslider label.ui-slider {
 		margin-right: 15px;
